--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,16 +20,16 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 # Add the main executable
-add_executable(sandbox main.c util.c)
+add_executable(sandbox main.c util.c queue.c)
 
 # Add the test executable
-add_executable(test_util test_util.cc util.c)
+add_executable(test_main test_util.cc test_queue.cc util.c queue.c)
 
 # Link the test executable with Google Test library
-target_link_libraries(test_util gtest_main)
+target_link_libraries(test_main gtest_main)
 
 # Add a custom target to run the tests
-add_custom_target(run_tests COMMAND test_util DEPENDS test_util)
+add_custom_target(run_tests COMMAND test_main DEPENDS test_main)
 
 enable_testing()
-add_test(NAME test_util COMMAND test_util)
+add_test(NAME test_main COMMAND test_main)
